@startuml
title Class Diagram - Toko Kevin

'======================
class User {
  - id_user: int
  - nama_user: string
  - email: string
  - password: string
  - role: enum
  --
  + createUser()
  + detailUser()
  + updateUser()
  + deleteUser()
  + login()
  + logout()
  + resetPassword()
  + updateProfile()
}

class Supplier {
  - id_supplier: int
  - nama_supplier: string
  - telepon: string
  - email: string
  - alamat: string
  --
  + createSupplier()
  + detailSupplier()
  + updateSupplier()
  + deleteSupplier()
}

class Kategori {
  - id_kategori: int
  - nama_kategori: string
  - keterangan: string
  --
  + createKategori()
  + detailKategori()
  + updateKategori()
  + deleteKategori()
}

class Produk {
  - id_produk: int
  - nama_produk: string
  - harga_jual: int
  - harga_beli: int
  - stok: int
  - id_kategori: int
  --
  + createProduk()
  + detailProduk()
  + updateProduk()
  + deleteProduk()
}

class Pembelian {
  - id_pembelian: int
  - tanggal: date
  - total_pembelian: int
  - id_supplier: int
  - id_user: int
  --
  + createPembelian()
  + detailPembelian()
  + updatePembelian()
  + deletePembelian()
}

class DetailPembelian {
  - id_detail_pembelian: int
  - id_pembelian: int
  - id_produk: int
  - jumlah_pembelian: int
  - harga_satuan: int
  --
  + addDetail()
}

class TransaksiPenjualan {
  - id_transaksi_penjualan: int
  - total_penjualan: int
  - tanggal: date
  - metode_pembayaran: enum
  - id_user: int
  --
  + createTransaksi()
  + detailTransaksi()
  + updateTransaksi()
  + deleteTransaksi()
}

class DetailPenjualan {
  - id_detail_penjualan: int
  - jumlah_produk: int
  - harga_satuan: int
  - id_transaksi_penjualan: int
  - id_produk: int
  --
  + addDetail()
}

User "1" -- "many" Pembelian
User "1" -- "many" TransaksiPenjualan
Supplier "1" -- "many" Pembelian
Pembelian "1" -- "many" DetailPembelian
TransaksiPenjualan "1" -- "many" DetailPenjualan
Produk "1" -- "many" DetailPembelian
Produk "1" -- "many" DetailPenjualan
Kategori "1" -- "many" Produk

@enduml
